Ui update and ticket booking screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   image_picker: ^1.0.7
-
+  fluttertoast: ^8.2.4
 
   firebase_core: ^1.24.0
   firebase_analytics: ^8.1.2
